--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----------- CONFIGURABLE START -----------
 title:            "keithgreer.uk"
 description:      "PHP, Magento and WordPress Developer"
-url:              https://keithgreer.co.uk # Site url, without a slash at the end.
+url:              https://keithgreer.uk/scribble # Site url, without a slash at the end.
 signoff:          "Keith" # Your name
 facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
